[package]
name = "lasm"
version = "0.1.0"
authors = ["adam-mcdaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lasm"
path = "src/bin.rs"

[dependencies]
clap = "2.33"
comment = "0.1"
lazy_static = "1.4"
spin = "0.5"
nom = "5"
